<?xml version="1.0"?>
<package>
  <name>sbpl_path</name>
  <version>0.0.0</version>
  <description>The sbpl_path package</description>

  <maintainer email="sugandhasangal@gmail.com">Sugandha Sangal</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>so3_control</run_depend>
  <run_depend>tf2_ros</run_depend>


  <export>

  </export>
</package>
